add networks, update security, update logging etc - SKU
